Closed Bug 97097 Opened 25 years ago Closed 24 years ago

nsIDNSService::Resolve does not use the dns cache

Categories

(Core :: Networking: Cache, defect, P1)

defect

Tracking

()

VERIFIED FIXED
mozilla0.9.9

People

(Reporter: bbaetz, Assigned: gordon)

References

Details

(Keywords: perf, Whiteboard: patch)

Attachments

(1 file, 3 obsolete files)

The synchronous dns resolve method doesn't use the DNS cache. This is bad because this function is used often in the PAC code, which must do a synchronous lookup. The same host is looked up more than once in lots of pac files for functions like isInNet, and I think that everyone assumed that the dns cache would get this. (Although I am going to suggest that the pac code does a one-entry cache, like the mozillaClassic code did, to avoid unneeded xpconnect wrapping.
Blocks: 93924
This seems doable in the 0.9.6 timeframe.
Target Milestone: --- → mozilla0.9.6
Blocks: 97605
*** Bug 104819 has been marked as a duplicate of this bug. ***
Moving to necko performance milestone 0.9.7.
Target Milestone: mozilla0.9.6 → mozilla0.9.7
Attached patch attaching patch (obsolete) — — Splinter Review
Please review the attached patch and let me know if there are problems.
Attached patch Protect table lookup with lock (obsolete) — — Splinter Review
Darin pointed out that the hash table lookup needs to be protected by the dns lock. Doing so.
Target Milestone: mozilla0.9.7 → mozilla0.9.8
Target Milestone: mozilla0.9.8 → mozilla0.9.9
Keywords: perf
Priority: -- → P1
Whiteboard: patch
Keywords: nsbeta1+
Gagan, Darin, I just submitted a new patch for your [super-]review. Is there a good stress test for Resolve()?
Gagan, Darin, please review.
Attachment #60795 - Attachment is obsolete: true
Attachment #61235 - Attachment is obsolete: true
Attachment #69532 - Attachment is obsolete: true
Comment on attachment 70212 [details] [diff] [review] replaces inet_ntoa() whose thread-safety is somewhat dubious. sr=darin
Attachment #70212 - Flags: superreview+
Comment on attachment 70212 [details] [diff] [review] replaces inet_ntoa() whose thread-safety is somewhat dubious. r=gagan
Attachment #70212 - Flags: review+
Patch checked in. Marking FIXED.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
verified
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: