Fix bug 97097 "nsIDNSService::Resolve does not use the dns cache".  r=gagan, sr=darin.